Code: Prepare H -> Za dataset for another transfer tests

--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -22,6 +22,8 @@
     "    'Track': 150,\n",
     "    'Photon': 2,\n",
     "    'Lepton': 4,\n",
+    "    'Photon_Za': 1,\n",
+    "    'Lepton_Za': 2,\n",
     "}"
    ]
   },
@@ -114,6 +116,40 @@
     "\n",
     "merged_file = utils_h5.merge_h5_file(*files)\n",
     "new_name = './data/ZZ_4l/VBF.h5'\n",
+    "\n",
+    "os.rename(merged_file, new_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'./data/Za_2l/GGF_Za-03.h5' and () are same structure, can be merged.\n",
+      "./data/Za_2l/GGF_Za-03_merged.h5 not exist. Copy ./data/Za_2l/GGF_Za-03.h5 to ./data/Za_2l/GGF_Za-03_merged.h5\n",
+      "Size of ./data/Za_2l/GGF_Za-03.h5: 45080\n",
+      "'./data/Za_2l/VBF_Za-03.h5' and () are same structure, can be merged.\n",
+      "./data/Za_2l/VBF_Za-03_merged.h5 not exist. Copy ./data/Za_2l/VBF_Za-03.h5 to ./data/Za_2l/VBF_Za-03_merged.h5\n",
+      "Size of ./data/Za_2l/VBF_Za-03.h5: 195859\n"
+     ]
+    }
+   ],
+   "source": [
+    "files = [f'./data/Za_2l/GGF_Za-{i:02}.h5' for i in range(3, 4)]\n",
+    "\n",
+    "merged_file = utils_h5.merge_h5_file(*files)\n",
+    "new_name = './data/Za_2l/GGF.h5'\n",
+    "\n",
+    "os.rename(merged_file, new_name)\n",
+    "\n",
+    "files = [f'./data/Za_2l/VBF_Za-{i:02}.h5' for i in range(3, 4)]\n",
+    "\n",
+    "merged_file = utils_h5.merge_h5_file(*files)\n",
+    "new_name = './data/Za_2l/VBF.h5'\n",
     "\n",
     "os.rename(merged_file, new_name)"
    ]
@@ -488,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +574,34 @@
     "\n",
     "        f_out['TOWER/phi'][:] = new_phi[:, :MAX_CONSTI['Tower']]\n",
     "        f_out['TRACK/phi'][:] = new_phi[:, MAX_CONSTI['Tower']:MAX_CONSTI['Tower']+MAX_CONSTI['Track']]\n",
-    "        f_out['LEPTON/phi'][:] = new_phi[:, MAX_CONSTI['Tower']+MAX_CONSTI['Track']:]"
+    "        f_out['LEPTON/phi'][:] = new_phi[:, MAX_CONSTI['Tower']+MAX_CONSTI['Track']:]\n",
+    "\n",
+    "\n",
+    "def to_event_image_h5_Za(h5_path, out_h5):\n",
+    "    \n",
+    "    out_h5 = Path(out_h5)\n",
+    "    out_h5.parent.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    shutil.copyfile(h5_path, out_h5)\n",
+    "\n",
+    "    with h5py.File(out_h5, 'a') as f_out:\n",
+    "        print(out_h5)\n",
+    "\n",
+    "        event_pt = np.concatenate([f_out['TOWER/pt'][:], f_out['TRACK/pt'][:], f_out['PHOTON/pt'][:], f_out['LEPTON/pt'][:]], axis=1)\n",
+    "        event_eta = np.concatenate([f_out['TOWER/eta'][:], f_out['TRACK/eta'][:], f_out['PHOTON/eta'][:], f_out['LEPTON/eta'][:]], axis=1)\n",
+    "        event_phi = np.concatenate([f_out['TOWER/phi'][:], f_out['TRACK/phi'][:], f_out['PHOTON/phi'][:], f_out['LEPTON/phi'][:]], axis=1)\n",
+    "\n",
+    "        _, new_eta, new_phi = phi_shift_and_flipping(event_pt, event_eta, event_phi)\n",
+    "\n",
+    "        f_out['TOWER/eta'][:] = new_eta[:, :MAX_CONSTI['Tower']]\n",
+    "        f_out['TRACK/eta'][:] = new_eta[:, MAX_CONSTI['Tower']:MAX_CONSTI['Tower'] + MAX_CONSTI['Track']]\n",
+    "        f_out['PHOTON/eta'][:] = new_eta[:, MAX_CONSTI['Tower'] + MAX_CONSTI['Track']:MAX_CONSTI['Tower'] + MAX_CONSTI['Track'] + MAX_CONSTI['Photon_Za']]\n",
+    "        f_out['LEPTON/eta'][:] = new_eta[:, MAX_CONSTI['Tower'] + MAX_CONSTI['Track'] + MAX_CONSTI['Photon_Za']:]\n",
+    "\n",
+    "        f_out['TOWER/phi'][:] = new_phi[:, :MAX_CONSTI['Tower']]\n",
+    "        f_out['TRACK/phi'][:] = new_phi[:, MAX_CONSTI['Tower']:MAX_CONSTI['Tower'] + MAX_CONSTI['Track']]\n",
+    "        f_out['PHOTON/phi'][:] = new_phi[:, MAX_CONSTI['Tower'] + MAX_CONSTI['Track']:MAX_CONSTI['Tower'] + MAX_CONSTI['Track'] + MAX_CONSTI['Photon_Za']]\n",
+    "        f_out['LEPTON/phi'][:] = new_phi[:, MAX_CONSTI['Tower'] + MAX_CONSTI['Track'] + MAX_CONSTI['Photon_Za']:]"
    ]
   },
   {
@@ -780,6 +843,34 @@
     "    h5_path = f'./data/ZZ_4l/{name}.h5'\n",
     "    out_h5 = f'./data/ZZ_4l/supervised/pre-processing/{name}.h5'\n",
     "    to_event_image_h5_ZZ(h5_path, out_h5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $H \\to Z\\gamma, Z \\to 2\\ell, \\ell = e, \\mu$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/Za_2l/supervised/pre-processing/VBF.h5\n",
+      "data/Za_2l/supervised/pre-processing/GGF.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in ['VBF', 'GGF']:\n",
+    "    h5_path = f'./data/Za_2l/{name}.h5'\n",
+    "    out_h5 = f'./data/Za_2l/supervised/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5_Za(h5_path, out_h5)"
    ]
   },
   {
@@ -2378,6 +2469,43 @@
     "case = 5\n",
     "h5_dir = Path('./data/ZZ_4l/supervised/pre-processing')\n",
     "npy_dir = Path(f'./data/ZZ_4l/supervised/pre-processing/remove_product_case_{case}/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF', 'GGF']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation-remove_decay_product_info.py {h5_path} {npy_path} {res} {case} &'\n",
+    "    print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $H \\to Z\\gamma, Z \\to 2\\ell, \\ell = e, \\mu$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation-remove_decay_product_info.py data/Za_2l/supervised/pre-processing/VBF.h5 data/Za_2l/supervised/pre-processing/40x40/VBF.npy 40 0 &\n",
+      "python pixelation-remove_decay_product_info.py data/Za_2l/supervised/pre-processing/GGF.h5 data/Za_2l/supervised/pre-processing/40x40/GGF.npy 40 0 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "case = 0\n",
+    "h5_dir = Path('./data/Za_2l/supervised/pre-processing')\n",
+    "npy_dir = Path(f'./data/Za_2l/supervised/pre-processing/{res}x{res}')\n",
     "\n",
     "# create output directory\n",
     "npy_dir.mkdir(parents=True, exist_ok=True)\n",
